--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="intro">
         <h1>The New Airpod Pro</h1>
-        <video src="videoplayback.mp4"></video>
+        <video autoplay controls loop>
+            <source src="videoplayback.mp4" type="video/mp4">
+        </video>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/jquery.ScrollMagic.js"
         integrity="sha512-j6u1BNEWLvyUpdANLSMaZhdhuK1wPrV/VQcZRCDAJJ45xrtg7s+/WBqA+AbKZr2HQuAToxp6RGO7rRtPIEubhg=="
